<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dimen_16dp"
    android:paddingTop="@dimen/dimen_16dp"
    >

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChangePhoneNumber"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:backgroundTint="@color/white"
        app:icon="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:iconGravity="start"
        app:iconTint="@color/blue"
        app:iconSize="@dimen/dimen_14dp"
        android:textSize="@dimen/dimen_14dp"
        android:textAllCaps="false"
        android:text="@string/change_number"
        android:padding="@dimen/dimen_0dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/dimen_30dp"
        android:layout_gravity="center"/>

    <ViewFlipper
        android:id="@+id/authViewFlipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/layoutPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_phone_number_to_continue"
                android:textSize="@dimen/dimen_18dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPhoneNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                app:errorEnabled="true"
                android:hint="@string/phone_number"
                app:prefixText="+91"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="phone"
                    android:minLines="1"
                    android:maxLength="10"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:id="@+id/btnCheckPhone"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18dp"
                android:text="@string/continue_" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutOtpLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMsgLoginWithOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_4_digit_code_sent_to_phone"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutOtp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                app:errorEnabled="true"
                android:hint="@string/otp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:minLines="1"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="48dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18dp"
                android:text="@string/login" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutVerifyOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMsgVerifyOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_4_digit_code_sent_to_phone"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutOtpRegister"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                app:errorEnabled="true"
                android:hint="@string/otp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextOtpRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:minLines="1"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnVerifyOTP"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="48dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18dp"
                android:text="@string/continue_" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                app:errorEnabled="true"
                android:hint="@string/enter_your_name"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:minLines="1"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_is_your_business_s_monthly_revenue_approximate"
                android:textSize="@dimen/dimen_16dp"
                android:textColor="@color/gray_444444"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_helps_us_recommend_pricing_and_services_that_fit_your_business_size"
                android:textSize="@dimen/dimen_14dp"
                android:layout_marginBottom="5dp"/>

            <RadioGroup
                android:id="@+id/radioGroupBusinessRevenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioBelow1Lakh"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:text="@string/below_1_lakh"
                    android:tag="BELOW_1_LAKH"/>

                <RadioButton
                    android:id="@+id/radio1to5Lakh"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:text="@string/_1_5_lakh"
                    android:tag="1_TO_5_LAKH"/>

                <RadioButton
                    android:id="@+id/radio5to10Lakh"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:text="@string/_5_10_lakh"
                    android:tag="5_TO_10_LAKH"/>

                <RadioButton
                    android:id="@+id/radio10to25Lakh"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:text="@string/_10_25_lakh"
                    android:tag="10_TO_25_LAKH"/>

                <RadioButton
                    android:id="@+id/radioAbove25Lakh"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:text="@string/above_25_lakh"
                    android:tag="ABOVE_25_LAKH"/>

            </RadioGroup>

            <TextView
                android:id="@+id/txtPrivacyPolicyInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/by_registering_you_agree_to_our_privacy_policy"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCompleteRegistration"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="48dp"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18dp"
                android:text="@string/complete_sign_up" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardPaymentStatus"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginTop="@dimen/payu_dimen_36dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="64dp"
                app:cardBackgroundColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:visibility="visible">

                <ImageView
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:src="@drawable/ic_baseline_done_24"
                    android:contentDescription="@string/success"
                    app:tint="@color/white" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ViewFlipper>

</LinearLayout>